# 3d-engine-2

./: .gitignore  CMakeLists.txt  Plan.md
src/: main.cpp
src/engine/: Camera.hpp  GameLoop.cpp  GameLoop.hpp  GameSettings.hpp  Logger.cpp  Logger.hpp  Shader.cpp  Window.cpp  Window.hpp  vertexShader.glsl
